--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,17 +1,22 @@
 {% include "recipes/partials/head.html" %}
 
 <body>
-    <header class="main-header-container">
-        <div class="main-header container">
-            <h1>
-                <a class="main-logo" href="/">
-                    <i class="fas fa-gamepad main-logo-icon"></i>
-                    <span class="main-logo-text">GameHub</span>
-                    <i class="fas fa-puzzle-piece main-logo-icon"></i>
-                </a>
-            </h1>
+    {% include "recipes/partials/header.html" %}
+
+    {% include "recipes/partials/search.html" %}
+
+    <main class="main-content-container">
+        <div class="main-content main-content-list container">
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="Temp">
+                </div>                   
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+                </div>
+            </div>
         </div>
-    </header>
+    </main>
 </body>
 
 </html>
