--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -7,37 +7,8 @@
 
     <main class="main-content-container">
         <div class="main-content main-content-list container">
-            <div class="recipe recipe-list-item">
-                <div class="recipe-cover">
-                    <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="Temp">
-                </div>               
-
-                <div class="recipe-title-container">
-                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
-                </div>
-
-                <div class="recipe-author">
-                    <span class="recipe-author-item">
-                        <i class="fas fa-user"></i>
-                        João Luiz
-                    </span>
-                    <span class="recipe-author-item">
-                        <i class="fas fa-calendar-alt"></i>
-                        22/01/2024 às 09:10
-                    </span>
-                    <span class="recipe-author-item">
-                        <a href="/recipes/category/cafe-da-manha">
-                            <i class="fas fa-layer-group"></i>
-                            <span>Café da Manhã</span>
-                        </a>
-                    </span>
-                </div>
-
-                <div class="recipe-content">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat modi ut magni totam recusandae sed facilis culpa provident dolore corporis repellat ratione laboriosam molestias, voluptates nesciunt perspiciatis nihil at ullam.Z</p>
-                </div>
-
-            </div>
+            {% include "recipes/partials/recipes.html" %}
+            {% include "recipes/partials/recipes.html" %}
         </div>
     </main>
 </body>
