--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -7,10 +7,12 @@
 
     <main class="main-content-container">
         <div class="main-content main-content-list container">
-            {% include "recipes/partials/recipes.html" %}
-            {% include "recipes/partials/recipes.html" %}
+            {% include "recipes/partials/recipe.html" %}
         </div>
     </main>
+
+    {% include "recipes/partials/footer.html" %}
+    
 </body>
 
 </html>
