--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -272,7 +272,7 @@
         }
 
         .main-footer a:hover {
-            filter: brightness(1);
+            filter: brightness(.4);
         }
     </style>
 </head>
